# Toon

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CodeStyleGuide.md  CommitPrefixes.txt  Dockerfile  LICENSE  README.md  appveyor.yml
Engine/: CMakeLists.txt
Engine/Assets/Shaders/Toon/: ColorSpace.inc.glsl  DebugNormalColor.frag.glsl  DebugNormalColor.vert.glsl  Default.frag.glsl  Default.vert.glsl  Default2.frag.glsl  Default2.vert.glsl  FlatColor.frag.glsl  FlatColor.vert.glsl  Globals.inc.glsl  Material.inc.glsl  Math.inc.glsl  TBN.inc.glsl  Transform.inc.glsl  VertexAttributes.inc.glsl
Engine/Assets/Shaders/Toon/Debug/: NormalColor.frag.glsl  NormalColor.vert.glsl
Engine/Assets/Textures/brickwall/: ReadMe.txt
Engine/Assets/Textures/mars/2k/: ReadMe.txt
Engine/Assets/models/: LowPolyMale_Rigging_Arm_Anim.fbx  LowPolyMale_Rigging_Arm_Anim.gltf  defaultScene.glb  defaultSceneLights.glb  defaultSceneLights.gltf
Engine/Assets/models/DamagedHelmet/: DamagedHelmet.gltf
Engine/Assets/models/Primitives/: pTorus.glb
Engine/Assets/shaders/: passThruColor.frag.glsl  passThruColor.vert.glsl  passThruTexture.vert  skybox.frag.glsl  skybox.vert.glsl
Engine/Private/: Animation.cpp  Animator.cpp  Axis.cpp  AxisComponent.cpp  Buffer.cpp  Camera.cpp  Collision.cpp  Cube.cpp  DevUI.cpp  Entity.cpp  Event.cpp  GameObject.cpp  GraphicsDriver.cpp  InputDriver.cpp  Joint.cpp  JointTransforms.cpp  KeyFrame.cpp  Light.cpp  Log.cpp  Material.cpp  Mesh.cpp  MeshComponent.cpp  MeshImporter.cpp  Module.cpp  Path.cpp  Primitive.cpp  PrimitiveData.cpp  Rigidbody.cpp  Scene.cpp  SceneImporter.cpp  ScriptHost.cpp  Shader.cpp  Skin.cpp  Skybox.cpp  Temporality.cpp  Texture.cpp  TextureImporter.cpp  Toon.cpp  Util.cpp  Utils.cpp
Engine/Public/Temporality/: Animation.hpp  Animator.hpp  Axis.hpp  Buffer.hpp  Camera.hpp  Collision.hpp  Component.hpp  Config.hpp  Cube.hpp  DevUI.hpp  Event.hpp  GameObject.hpp  GraphicsDriver.hpp  Joint.hpp  JointTransforms.hpp  KeyFrame.hpp  Light.hpp  Log.hpp  Macros.hpp  Mesh.hpp  MeshImporter.hpp  Module.hpp  Pipeline.hpp  Platform.hpp  Primitive.hpp  PrimitiveData.hpp  RenderContext.hpp  Rigidbody.hpp  Scene.hpp  ScriptHost.hpp  Shader.hpp  Skin.hpp  Skybox.hpp  Temporality.hpp  Texture.hpp  TextureImporter.hpp  UpdateContext.hpp  Utils.hpp  Version.hpp  Vertex.hpp
Engine/Public/Temporality/Graphics/: GraphicsDriver.hpp  Mesh.hpp  MeshImporter.hpp  Shader.hpp  Texture.hpp  TextureImporter.hpp  TransformData.hpp
Engine/Public/Temporality/Scene/: Component.hpp  Entity.hpp  MeshComponent.hpp
Engine/Public/Toon/: Animation.hpp  Animator.hpp  AudioDriver.hpp  Axis.hpp  AxisComponent.hpp  Benchmark.hpp  Buffer.hpp  Camera.hpp  Collision.hpp  CommandList.hpp  Component.hpp  Config.hpp  Config.hpp.in  Controller.hpp  Cube.hpp  DevUI.hpp  Entity.hpp  Event.hpp  Font.hpp  GraphicsDriver.hpp  InputDriver.hpp  JSON.hpp  Joint.hpp  JointTransforms.hpp  KeyFrame.hpp  Keyboard.hpp  Light.hpp  Log.hpp  Macros.hpp  Material.hpp  Math.hpp  Mesh.hpp  MeshComponent.hpp  MeshImporter.hpp  Module.hpp  Mouse.hpp  Path.hpp  Pipeline.hpp  Platform.hpp  Primitive.hpp  (+25 more)
Modules/: CMakeLists.txt
Modules/GLTF2/: CMakeLists.txt
Modules/GLTF2/Private/: Base64.hpp  GLTF2MeshImporter.cpp  GLTF2Module.cpp  GLTF2SceneImporter.cpp  OpenGLStub.hpp  glTF2File.cpp  glTF2File.hpp
Modules/OpenGL/: CMakeLists.txt
Modules/OpenGL/Private/: GraphicsDriver.cpp  Mesh.cpp  Module.cpp  OpenGLBuffer.cpp  OpenGLGraphicsDriver.cpp  OpenGLMaterial.cpp  OpenGLMesh.cpp  OpenGLModule.cpp  OpenGLPipeline.cpp  OpenGLPrimitive.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  Shader.cpp  Texture.cpp
Modules/OpenGL/Private/glad/: gl.c
Modules/OpenGL/Public/glad/: gl.h  glad.h
Modules/SDL2/: CMakeLists.txt
Modules/SDL2/Private/: SDL2GraphicsDriver.cpp  SDL2InputDriver.cpp  SDL2Module.cpp
Modules/STBI/: CMakeLists.txt
Modules/STBI/Private/: Module.cpp  STBIModule.cpp  STBITextureImporter.cpp  TextureImporter.cpp
Modules/TinyOBJ/: CMakeLists.txt
Modules/TinyOBJ/Private/: MeshImporter.cpp  Module.cpp  TinyOBJMeshImporter.cpp  TinyOBJModule.cpp  tiny_obj_loader.h
Modules/Vulkan/: CMakeLists.txt
Modules/Vulkan/Private/: VulkanBuffer.cpp  VulkanGraphicsDriver.cpp  VulkanMesh.cpp  VulkanModule.cpp  VulkanPipeline.cpp  VulkanPrimitive.cpp  VulkanShader.cpp  VulkanTexture.cpp
Modules/Vulkan/Private/glad/: vulkan.c
Modules/Vulkan/Public/glad/: vulkan.h
demos/: CMakeLists.txt
demos/AdvancedLighting/: CMakeLists.txt
demos/AdvancedLighting/resources/shaders/: advLighting.frag  advLighting.vert
demos/AdvancedLighting/src/: GameScene.cpp  GameScene.hpp  Main.cpp
demos/BasicLighting/resources/shaders/: axis.frag  basicLighting.frag  basicLighting.vert  passThru.frag
demos/BasicLighting/src/: GameScene.cpp  GameScene.hpp  Main.cpp
demos/Cubemap/resources/shaders/: reflection.frag
demos/Cubemap/src/: GameScene.cpp  GameScene.hpp
demos/HelloWorld/: CMakeLists.txt
demos/HelloWorld/resources/models/: sun.mtl
demos/HelloWorld/src/: GameScene.cpp  GameScene.hpp  Main.cpp
demos/LightCasters/: CMakeLists.txt
demos/LightCasters/resources/shaders/: lightCasters.frag  lightCasters.vert
demos/LightCasters/src/: GameScene.cpp  GameScene.hpp  Main.cpp
demos/MultipleLights/resources/shaders/: multiLights.frag  multiLights.vert
demos/MultipleLights/src/: GameScene.cpp  Main.cpp
demos/NormalMapping/: CMakeLists.txt
demos/NormalMapping/resources/models/: earth.mtl
demos/NormalMapping/resources/shaders/: normalMapping.frag  normalMapping.vert  passThru.vert
demos/NormalMapping/src/: GameScene.cpp  GameScene.hpp  Main.cpp
demos/Sandbox/: CMakeLists.txt
demos/Sandbox/resources/shaders/: advLighting.frag  advLighting.vert  normalMapping.frag  normalMapping.vert  stencil.frag  time.frag  time.vert  ui.frag  ui.vert
demos/Sandbox/src/: GameScene.cpp  GameScene.hpp  Main.cpp
demos/Stencil/src/: GameScene.cpp  GameScene.hpp
depend/: CMakeLists.txt
old/demos/AdvancedLighting/: CMakeLists.txt
old/demos/AdvancedLighting/src/: GameScene.cpp  GameScene.hpp
(+363 files in other folders)
