
GET_FILENAME_COMPONENT(EXAMPLE "${CMAKE_CURRENT_LIST_DIR}" NAME)

ADD_EXECUTABLE(${EXAMPLE}
    src/Main.cpp
    src/GameScene.hpp
    src/GameScene.cpp
)

TARGET_LINK_LIBRARIES(${EXAMPLE}
    ${PROJECT_NAME}
)

FILE(RELATIVE_PATH EXAMPLE_RESOURCE_PATH "${CMAKE_BINARY_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/resources")
IF(WIN32)
	SET(EXAMPLE_RESOURCE_PATH "../${EXAMPLE_RESOURCE_PATH}")
ENDIF()

TARGET_COMPILE_DEFINITIONS(${EXAMPLE}
    PUBLIC -DRESOURCE_PATH="${EXAMPLE_RESOURCE_PATH}:${RESOURCE_PATH}"
)
