
GET_FILENAME_COMPONENT(EXAMPLE "${CMAKE_CURRENT_LIST_DIR}" NAME)

ADD_EXECUTABLE(${EXAMPLE}
    src/Main.cpp
    src/GameScene.hpp
    src/GameScene.cpp
)

TARGET_LINK_LIBRARIES(${EXAMPLE}
    ${PROJECT_NAME}
)
 
FILE(RELATIVE_PATH BINARY_RESOURCE_PATH "${CMAKE_BINARY_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/resources")
FILE(RELATIVE_PATH SOURCE_RESOURCE_PATH "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/resources")

TARGET_COMPILE_DEFINITIONS(${EXAMPLE}
    PUBLIC -DRESOURCE_PATH="${SOURCE_RESOURCE_PATH}:${BINARY_RESOURCE_PATH}:${CMAKE_SOURCE_DIR}/resources:${RESOURCE_PATH}"
)
