
GET_FILENAME_COMPONENT(EXAMPLE "${CMAKE_CURRENT_LIST_DIR}" NAME)

ADD_EXECUTABLE(${EXAMPLE}
    src/Main.cpp
    src/GameScene.hpp
    src/GameScene.cpp
)

TARGET_LINK_LIBRARIES(${EXAMPLE}
    ${PROJECT_NAME}
)

FILE(RELATIVE_PATH EXAMPLE_RESOURCE_PATH "${CMAKE_BINARY_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/resources")

TARGET_COMPILE_DEFINITIONS(${EXAMPLE}
    PUBLIC -DRESOURCE_PATH="${EXAMPLE_RESOURCE_PATH}:${RESOURCE_PATH}"
)

IF(MSVC)
    SET_TARGET_PROPERTIES(
        ${EXAMPLE} 
        PROPERTIES 
            VS_DEBUGGER_ENVIRONMENT "PATH=%PATH%;${RUNTIME_SEARCH_PATH}"
    )
ENDIF()
